#707590 by tzoscott: fix bad linewrap when fractions are wide.

--- a/recipe.css
+++ b/recipe.css
@@ -27,7 +27,8 @@
 .recipe-ingredients .qty {
   float:left;
   text-align:right;
-  width:4em;
+  width:5.5em;
+  white-space:nowrap;
 }
 
 .recipe-ingredients .acronym-wrap {
